# docker2k8s

./: .gitignore  LICENSE  README.md  pyproject.toml
docker2k8s/: __init__.py  cli.py  converter.py  parser.py  providers.py  validator.py
docker2k8s/generators/: __init__.py  configmap.py  deployment.py  hpa.py  ingress.py  service.py
